Prevent overflow of textarea

--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ body {
 .textbox-body {
   width: 100%;
   height: 100%;
+  margin-bottom: 2px;
 }
 .text {
   width: 100%;
